--- a/ui/src/Common/Modal/Modal.scss
+++ b/ui/src/Common/Modal/Modal.scss
@@ -40,8 +40,10 @@
 
 	.modal-content {
 		width: 100%;
+		height: 100%;
 		margin: auto;
 		padding: 0 0.8rem;
+		overflow: scroll;
 
 		color: main.$asphalt;
 		font-family: 'Quicksand', sans-serif;
@@ -53,6 +55,8 @@
 
 		@include main.breakpoint-medium {
 			width: unset;
+			height: unset;
+			overflow: unset;
 		}
 
 		&.super-size {
